Add function to generate choice randomly
In this version of the rock, paper, scissors game, the player goes
against the computer; in order to generate a random choice for the
computer there are two functions: randomIntRange() and computerPlay().

randomIntRange() has two parameters that define a range and then returns
a value between that range using a mathematical expression.

computerPlay() is the function that returns a string with the choice.
It has a variable that stores a random number between 1 and 3 and based
on some conditionals it returns the choice.

--- a/rock-paper-scissors.html
+++ b/rock-paper-scissors.html
@@ -7,6 +7,26 @@
 
     <body>
         <script>
+            //Generate a random integer from a range
+            function randomIntRange(min, max) {
+                return Math.floor(Math.random() * (max - min + 1) + min)
+            }
+            
+            function computerPlay() {
+                //Based on a random number, return 'rock', 'paper'
+                //or 'scissors'
+                let rndNum = randomIntRange(1, 3);
+                
+                if (rndNum === 1) {
+                    return 'rock'
+                } else if (rndNum === 2) {
+                    return 'paper'
+                } else {
+                    return 'scissors'
+                }
+            }
+
+            console.log(computerPlay());
         </script>    
     </body>
 </html>
