--- a/rock-paper-scissors.html
+++ b/rock-paper-scissors.html
@@ -13,7 +13,7 @@
             }
             
             function computerPlay() {
-                //Based on a random number, return 'rock', 'paper'
+                //Based on a random number between 1 and 3 return 'rock', 'paper'
                 //or 'scissors'
                 let rndNum = randomIntRange(1, 3);
                 
@@ -26,7 +26,10 @@
                 }
             }
 
-            console.log(computerPlay());
+            function getPlayerChoice() {
+                let playerChoice = prompt('Please enter a choice (rock, paper or scissors):');
+                return playerChoice.toLocaleLowerCase();
+            }         
         </script>    
     </body>
 </html>
