--- a/rock-paper-scissors.html
+++ b/rock-paper-scissors.html
@@ -32,6 +32,7 @@
             }
             
             function playRound(playerSelection, computerSelection) {
+                //Decides the winner or a tie of one game and display a message
                 if (playerSelection === computerSelection) {
                     return "It's a tie!"
                 } else if ((playerSelection === "rock" && computerSelection === "paper") ||
@@ -46,6 +47,33 @@
                          + computerSelection.slice(1)}`
                 }                
             }
+
+            function game() {
+                let playyerWins = 0;
+                let computerWins = 0;
+                let winnerRound;
+
+                for (let i = 0; i < 5; i++) {
+                    winnerRound = playRound(getPlayerChoice(), computerPlay());
+                    console.log(winnerRound);
+
+                    if (winnerRound.startsWith("You Win")) {
+                        playyerWins += 1;
+                    } else if (winnerRound.startsWith("You Lose")){
+                        computerWins += 1;
+                    }
+                }
+
+                if (playyerWins > computerWins) {
+                    console.log("You Win!");
+                } else if (playyerWins < computerWins){
+                    console.log("You lose!");
+                } else {
+                    console.log("It's a tie!")
+                }
+            }
+
+            game();
         </script>    
     </body>
 </html>
