--- a/rock-paper-scissors.html
+++ b/rock-paper-scissors.html
@@ -10,6 +10,10 @@
     <button id="paper">Paper</button>
     <button id="scissors">Scissors</button>
 
+    <div class="score">
+      <h1>Score</h1>      
+    </div>
+
     <script>
         //Generate a random integer from a range
         function randomIntRange(min, max) {
