Create game() and createButtons() functions
The createButtons() function just makes buttons with eventListeners
when they are clicked. The game function is the one that keeps the score
of the plays.

--- a/rock-paper-scissors.html
+++ b/rock-paper-scissors.html
@@ -45,13 +45,23 @@
           }                
         }
 
-        const buttons = document.querySelectorAll('button');
+        function createButtons(){          
+          const buttons = document.querySelectorAll('button');
+  
+          buttons.forEach((button) => {
+            button.addEventListener('click', e => {
+              console.log(playRound(button.id, computerPlay()));
+            });
+          });         
 
-        buttons.forEach((button) => {
-          button.addEventListener('click', e => {
-            console.log(playRound(button.id, computerPlay()));
-          });
-        });         
+        }
+
+        function game() {
+          let playerScore = 0;
+          let computerScore = 0;
+
+          const buttons = createButtons();
+        }
     </script>    
   </body>
 </html>
