Update the score of the players
With some if conditions in the button's function it's called the new
updateScore() Function.

This function receives the class of the element
that won the round when a button is clicked. Then it creates a copy
of the element, creates an array to obtain the score, then converts
that string value to an int in order to increase in 1 the value and
finally update the content of the element to display the result on
the page.

--- a/rock-paper-scissors.html
+++ b/rock-paper-scissors.html
@@ -45,6 +45,13 @@
           }                
         }
 
+        function updateScore(winner) {
+          let pWinner = document.querySelector(winner);
+          let winnerArray = pWinner.textContent.split(" ");
+          let score = parseInt(winnerArray[1]) + 1;
+          pWinner.textContent = winnerArray[0] + " " + score;
+        }
+
         function createButtons(){          
           const buttons = document.querySelectorAll('button');
   
@@ -53,6 +60,13 @@
               let roundResult = playRound(button.id, computerPlay());
               pRoundResult = document.querySelector('.round');
               pRoundResult.textContent = roundResult;
+              if (roundResult.startsWith("You Win!")) {
+                //player wins
+                updateScore(".player");
+              } else if (roundResult.startsWith("You Lose!")){
+                //computer wins
+                updateScore(".computer");
+              }
             });
           });         
 
